karnc/tests/fixtures/negative/94_workers_with_cycle/src/commerce/a.karn
context commerce.a {
  consumes commerce.b
}
